--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -17,3 +17,11 @@
 .step-container {
     max-width: 1000px;
 }
+
+.v-stepper-header {
+    z-index: 0;
+}
+
+.v-timeline-divider__dot {
+    z-index: 0;
+}
